--- a/serverless.yml
+++ b/serverless.yml
@@ -20,10 +20,8 @@ service: spike-serverless-framework # NOTE: update this with your service name
 provider:
   name: aws
   runtime: nodejs8.10
-
-# you can overwrite defaults here
-#  stage: dev
-#  region: us-east-1
+  stage: dev
+  region: ap-northeast-1
 
 # you can add statements to the Lambda function's IAM Role here
 #  iamRoleStatements:
@@ -57,7 +55,6 @@ provider:
 functions:
   hello:
     handler: handler.hello
-
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
