--- a/serverless.yml
+++ b/serverless.yml
@@ -23,6 +23,9 @@ provider:
   stage: dev
   region: ap-northeast-1
 
+plugins:
+  - serverless-offline
+
 # you can add statements to the Lambda function's IAM Role here
 #  iamRoleStatements:
 #    - Effect: "Allow"
@@ -55,6 +58,10 @@ provider:
 functions:
   hello:
     handler: src/functions/handler.hello
+    events:
+      - http:
+          path: /hello
+          method: GET
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
