--- a/package.json
+++ b/package.json
@@ -17,6 +17,15 @@
   },
   "homepage": "https://github.com/shimpeiws/spike-serverless-framework#readme",
   "dependencies": {
-    "serverless-offline": "^4.3.0"
+    "serverless-offline": "^4.3.0",
+    "webpack": "^4.29.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "serverless-webpack": "^5.2.0"
   }
 }
