--- a/serverless.yml
+++ b/serverless.yml
@@ -25,6 +25,7 @@ provider:
 
 plugins:
   - serverless-offline
+  - serverless-webpack
 
 # you can add statements to the Lambda function's IAM Role here
 #  iamRoleStatements:
