--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "serverless-domain-manager": "^2.6.13",
     "serverless-webpack": "^5.2.0"
   }
 }
