--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/shimpeiws/spike-serverless-framework#readme",
   "dependencies": {
     "serverless-offline": "^4.3.0",
-    "webpack": "^4.29.3"
+    "webpack": "^4.29.3",
+    "puppeteer": "^1.12.2",
+    "puppeteer-core": "^1.12.2"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
