--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   },
   "homepage": "https://github.com/shimpeiws/spike-serverless-framework#readme",
   "dependencies": {
-    "serverless-offline": "^4.3.0",
-    "webpack": "^4.29.3",
+    "@serverless-chrome/lambda": "^1.0.0-55",
+    "chrome-remote-interface": "^0.27.1",
     "puppeteer": "^1.12.2",
-    "puppeteer-core": "^1.12.2"
+    "puppeteer-core": "^1.12.2",
+    "serverless-offline": "^4.3.0",
+    "webpack": "^4.29.3"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
@@ -28,6 +30,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "chrome-launcher": "^0.10.5",
     "serverless-domain-manager": "^2.6.13",
     "serverless-webpack": "^5.2.0"
   }
