--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "@serverless-chrome/lambda": "^1.0.0-55",
     "chrome-remote-interface": "^0.27.1",
     "puppeteer": "^1.12.2",
-    "puppeteer-core": "^1.12.2",
-    "serverless-offline": "^4.3.0",
-    "webpack": "^4.29.3"
+    "puppeteer-core": "^1.12.2"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
@@ -32,6 +30,8 @@
     "babel-preset-env": "^1.7.0",
     "chrome-launcher": "^0.10.5",
     "serverless-domain-manager": "^2.6.13",
-    "serverless-webpack": "^5.2.0"
+    "serverless-offline": "^4.3.0",
+    "serverless-webpack": "^5.2.0",
+    "webpack": "^4.29.3"
   }
 }
