--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "homepage": "https://github.com/shimpeiws/spike-serverless-framework#readme",
   "dependencies": {
     "@serverless-chrome/lambda": "^1.0.0-55",
+    "aws-sdk": "^2.400.0",
     "chrome-remote-interface": "^0.27.1",
     "puppeteer": "^1.12.2",
-    "puppeteer-core": "^1.12.2"
+    "puppeteer-core": "^1.12.2",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
@@ -30,6 +32,7 @@
     "babel-preset-env": "^1.7.0",
     "chrome-launcher": "^0.10.5",
     "serverless-domain-manager": "^2.6.13",
+    "serverless-dynamodb-local": "^0.2.36",
     "serverless-offline": "^4.3.0",
     "serverless-webpack": "^5.2.0",
     "webpack": "^4.29.3"
