--- a/package.json
+++ b/package.json
@@ -36,5 +36,11 @@
     "serverless-offline": "^4.3.0",
     "serverless-webpack": "^5.2.0",
     "webpack": "^4.29.3"
+  },
+  "resolutions": {
+    "serverless-dynamodb-local/dynamodb-localhost": "0.0.7"
+  },
+  "resolutionsComment": {
+    "serverless-dynamodb-local/dynamodb-localhost": "https: //github.com/99xt/serverless-dynamodb-local/issues/195#issuecomment-451867662"
   }
 }
