--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@serverless-chrome/lambda": "^1.0.0-55",
     "aws-sdk": "^2.400.0",
+    "axios": "^0.18.0",
     "chrome-remote-interface": "^0.27.1",
     "puppeteer": "^1.12.2",
     "puppeteer-core": "^1.12.2",
