--- a/serverless.yml
+++ b/serverless.yml
@@ -5,6 +5,17 @@ provider:
   runtime: nodejs8.10
   stage: dev
   region: ap-northeast-1
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:DescribeTable
+        - dynamodb:Query
+        - dynamodb:Scan
+        - dynamodb:GetItem
+        - dynamodb:PutItem
+        - dynamodb:UpdateItem
+        - dynamodb:DeleteItem
+      Resource: 'arn:aws:dynamodb:${self:provider.region}:*:table/*-${self:provider.stage}'
   environment:
     DYNAMODB_TABLE: ${self:service}-${self:provider.stage}
     TEST_DYNAMODB_TABLE: test-${self:service}-${self:provider.stage}
