Add config file

--- a/serverless.yml
+++ b/serverless.yml
@@ -20,7 +20,7 @@ provider:
     DYNAMODB_TABLE: ${self:service}-${self:provider.stage}
     TEST_DYNAMODB_TABLE: test-${self:service}-${self:provider.stage}
     IMAGES_DYNAMODB_TABLE: images-${self:service}-${self:provider.stage}
-    PIXABAY_API_KEY: ${env:PIXABAY_API_KEY}
+    PIXABAY_API_KEY: ${self:custom.configFile.${self:provider.stage}.PIXABAY_API_KEY}
 
 plugins:
   - serverless-offline
@@ -49,6 +49,8 @@ custom:
     stage: ${self:provider.stage}
     createRoute53Record: true
     endpointType: 'regional'
+  configFile:
+    dev: ${file(./config/dev.yml)}
 
 functions:
   hello:
