--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "dotenv": "^6.2.0",
     "serverless-domain-manager": "^2.6.13",
     "serverless-dynamodb-local": "^0.2.36",
     "serverless-offline": "^4.3.0",
