Add websocket plugin

--- a/serverless.yml
+++ b/serverless.yml
@@ -8,6 +8,11 @@ provider:
   iamRoleStatements:
     - Effect: Allow
       Action:
+        - execute-api:ManageConnections
+      Resource:
+        - arn:aws:execute-api:*:*:**/@connections/*
+    - Effect: Allow
+      Action:
         - dynamodb:DescribeTable
         - dynamodb:Query
         - dynamodb:Scan
@@ -28,13 +33,17 @@ provider:
     DYNAMODB_TABLE: ${self:service}-${self:provider.stage}
     TEST_DYNAMODB_TABLE: test-${self:service}-${self:provider.stage}
     IMAGES_DYNAMODB_TABLE: images-${self:service}-${self:provider.stage}
+    CONNECTIONS_DYNAMODB_TABLE: connections-${self:service}-${self:provider.stage}
     PIXABAY_API_KEY: ${env:PIXABAY_API_KEY}
+  websocketApiName: ${self:service.name}-${self:provider.stage}
+  websocketApiRouteSelectionExpression: $request.body.action
 
 plugins:
   - serverless-offline
   - serverless-webpack
   - serverless-domain-manager
   - serverless-dynamodb-local
+  - serverless-websockets-plugin
 
 custom:
   dynamodb:
@@ -91,6 +100,13 @@ functions:
             Fn::GetAtt:
               - TestQueue
               - Arn
+  connectionManager:
+    handler: src/handler.connectionManager
+    events:
+      - websocket:
+          routeKey: $connect
+      - websocket:
+          routeKey: $disconnect
 
 resources:
   Resources:
@@ -137,3 +153,16 @@ resources:
         ProvisionedThroughput:
           ReadCapacityUnits: 1
           WriteCapacityUnits: 1
+    SpikeServerlessFrameworkConnectionsTable:
+      Type: AWS::DynamoDB::Table
+        Properties:
+          TableName: ${self:provider.environment.CONNECTIONS_DYNAMODB_TABLE}
+          AttributeDefinitions:
+            - AttributeName: query
+              AttributeType: S
+          KeySchema:
+            - AttributeName: query
+              KeyType: HASH
+          ProvisionedThroughput:
+            ReadCapacityUnits: 1
+            WriteCapacityUnits: 1
