--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "aws-sdk": "^2.400.0",
     "axios": "^0.18.0",
+    "serverless-websockets-plugin": "^1.0.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
