--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "serverless-dynamodb-local": "^0.2.36",
     "serverless-offline": "^4.3.0",
     "serverless-webpack": "^5.2.0",
-    "webpack": "^4.29.3"
+    "webpack": "^4.29.3",
+    "wscat": "^2.2.1"
   },
   "resolutions": {
     "serverless-dynamodb-local/dynamodb-localhost": "0.0.7"
