--- a/serverless.yml
+++ b/serverless.yml
@@ -107,6 +107,16 @@ functions:
           routeKey: $connect
       - websocket:
           routeKey: $disconnect
+  defaultMessage:
+    handler: src/handler.defaultMessage
+    events:
+      - websocket:
+          routeKey: $default
+  sendMessage:
+    handler: src/handler.sendMessage
+    events:
+      - websocket:
+          routeKey: sendMessage
 
 resources:
   Resources:
@@ -158,11 +168,15 @@ resources:
         Properties:
           TableName: ${self:provider.environment.CONNECTIONS_DYNAMODB_TABLE}
           AttributeDefinitions:
-            - AttributeName: query
+            - AttributeName: ConnectionId
               AttributeType: S
           KeySchema:
-            - AttributeName: query
+            - AttributeName: ConnectionId
               KeyType: HASH
           ProvisionedThroughput:
             ReadCapacityUnits: 1
             WriteCapacityUnits: 1
+          SSESpecification:
+            SSEEnabled: True
+          StreamSpecification:
+            StreamViewType: NEW_AND_OLD_IMAGES
